--- a/trunk/services/webhosting/webhosting.conf
+++ b/trunk/services/webhosting/webhosting.conf
@@ -2,13 +2,35 @@
   <Directory />
     Order Deny,Allow
     Allow from all
+    Options None
   </Directory>
+  <Directory "/usr/local/webhosting/html/cgi-bin">
+    Options +ExecCGI
+    AddHandler cgi-script .cgi
+  </Directory>
+  DocumentRoot /usr/local/webhosting/html
+#  ScriptAlias /cgi-bin/ "/usr/local/webhosting/html/cgi-bin/"
+  ErrorDocument 404 /cgi-bin/404-error.cgi
+  ErrorDocument 403 /cgi-bin/404-error.cgi
   ServerAlias *.openfoundry.org
   ServerName webhosting.openfoundry.org
   ErrorLog /dev/null
   RewriteEngine On
-  RewriteCond %{SERVER_NAME} ^webhosting.openfoundry.org$
-  RewriteRule ^/(.*)$ /usr/local/webhosting/html/$1 [L]
+  RewriteLog /var/log/rewrite.log
+  RewriteLogLevel 9
+
+  RewriteCond %{SERVER_NAME} =webhosting.openfoundry.org
+  RewriteCond /usr/local/webhosting/html%{REQUEST_URI} -d [OR]
+  RewriteCond /usr/local/webhosting/html%{REQUEST_URI} -f
+  RewriteRule /(.*) /$1 [L]
+
+  RewriteCond %{SERVER_NAME} =webhosting.openfoundry.org
+  RewriteRule . /cgi-bin/404-error.cgi [L]
+
+#  RewriteRule /cgi-bin(.*) /usr/local/webhosting/html/cgi-bin(.*) [L]
+
+#  RewriteCond %{SERVER_NAME} ^webhosting.openfoundry.org$
+#  RewriteRule ^/(.*)$ /usr/local/webhosting/html/$1 [L]
 
 #
 # redirectURL
@@ -23,13 +45,32 @@
 #
 #RewriteCond %{SERVER_NAME} ([^.]+).openfoundry.org$
 #  RewriteCond %{SERVER_NAME} (((.).)[^.]+).openfoundry.org$
+# if the project dorectory exists
   RewriteCond %{SERVER_NAME} ^(.+).openfoundry.org$
   RewriteCond /usr/upload/%1/webroot -d
+# and the path (dir or file) exists
+  RewriteCond /usr/upload/%1/webroot%{REQUEST_URI} -d [OR]
+  RewriteCond /usr/upload/%1/webroot%{REQUEST_URI} -f
+# then go to that path
   RewriteRule ^/(.*)$ /usr/upload/%1/webroot/$1 [L]
+
+# the project exists, but the path does not exists
+  RewriteCond %{SERVER_NAME} ^(.+).openfoundry.org$
+  RewriteCond /usr/upload/%1/webroot -d
+  RewriteRule . /cgi-bin/404-error.cgi [L]
+#  RewriteRule . /usr/local/webhosting/html/cgi-bin/404-error.cgi [T=application/x-httpd-cgi,L]
+
+#  RewriteCond %{SERVER_NAME} ^(.+).openfoundry.org$
+#  RewriteCond /usr/upload/%1/webroot -d
+#  RewriteCond /usr/upload/%1/webroot%{REQUEST_URI} !-f
+#  RewriteRule ^(.*)$ /cgi-bin/404-error.cgi [L]
 
 #
 # project search
 #
-RewriteCond %{SERVER_NAME} ([^.]+).openfoundry.org$
-RewriteRule ^/(.*)$ http://dev.openfoundry.org/search?query=%1&commit=search
+# if the project directory does NOT exist (not a project)
+  RewriteCond %{SERVER_NAME} ^([^.]+).openfoundry.org
+  RewriteCond /usr/upload/%1/webroot !-d
+# go to search ..
+  RewriteRule ^/(.*)$ http://dev.openfoundry.org/search?query=%1&commit=search
 </VirtualHost>
