--- a/trunk/of/test/fixtures/releases.yml
+++ b/trunk/of/test/fixtures/releases.yml
@@ -2,18 +2,18 @@
 <%index=0%>
 <%pid=0%>
 <%t1=Time.now.strftime '%Y-%m-%d %H:%M:%S'%>
-<% %w(openfoundry closefoundry twrug tossug meowmoew newname pcman lazybuntu wizardry keroro).each do |projectname| %>
-<%=projectname%>_rel_v0:
+<% %w(openfoundry closefoundry twrug tossug meowmoew newname pcman lazybuntu wizardry keroro).each do |summary| %>
+<%=summary%>_rel_v0:
   id: <%=index+=1%>
-  name: <%=projectname%>_release_ver 0.0.0
+  name: <%=summary%>_release_ver 0.0.0
   project_id: <%=pid+=1%> 
   description: line low moon~
   version: 0.0.0
   due: <%=t1%>
 
-<%=projectname%>_rel_v9:
+<%=summary%>_rel_v9:
   id: <%=index+=1%>
-  name: <%=projectname%>_release_ver 9.9.9
+  name: <%=summary%>_release_ver 9.9.9
   project_id: <%=pid%> 
   description: so long~ so long~
   version: 9.9.9
