--- a/of/test/fixtures/projects.yml
+++ b/of/test/fixtures/projects.yml
@@ -7,7 +7,7 @@
   unixname: <%=summary%>
   summary: <%=summary%> ver 0.0.0 super song
   rationale: <%=summary%>, it is a good day to die!!
-  publicdescription: to <%=summary%> or not to <%=summary%>, that is a question~
+  description: to <%=summary%> or not to <%=summary%>, that is a question~
   contactinfo: contact@<%=summary%>.openfoundry.org
   maturity: mission impossible for <%=summary%>
   license: BSD
