--- a/trunk/services/kwiki/apache/kwiki.conf
+++ b/trunk/services/kwiki/apache/kwiki.conf
@@ -1,11 +1,32 @@
-Alias / /usr/local/kwiki/
+Alias /Kwiki/ /usr/local/kwiki/
 <Directory /usr/local/kwiki/>
 	Order allow,deny
 	Allow from all
 	AllowOverride All
 	Options ExecCGI FollowSymLinks
 	AddHandler cgi-script .cgi
-	DirectoryIndex index.cgi
+	DirectoryIndex index.cgi index.html
 
-	ErrorDocument 404 /.default/not_found.cgi
+	ErrorDocument 404 /Kwiki/.default/not_found.cgi
+</Directory>
+
+<Directory /usr/local/kwiki/*/database>
+	Order deny,allow
+	Deny from all
+</Directory>
+<Directory /usr/local/kwiki/*/plugin>
+	Order deny,allow
+	Deny from all
+</Directory>
+
+Alias /Kwiki2/ /usr/local/kwiki2/
+<Directory /usr/local/kwiki2/>
+	Order allow,deny
+	Allow from all
+	AllowOverride All
+	Options ExecCGI FollowSymLinks
+	AddHandler cgi-script .cgi
+	DirectoryIndex index.cgi index.html
+
+	ErrorDocument 404 /Kwiki2/.default/not_found.cgi
 </Directory>
