--- a/services/sympa/source/Makefile
+++ b/services/sympa/source/Makefile
@@ -85,57 +85,57 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /root/sympa-5.4.3/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /root/sympa_co/source/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /root/sympa-5.4.3/missing --run tar
-AUTOCONF = ${SHELL} /root/sympa-5.4.3/missing --run autoconf
-AUTOHEADER = ${SHELL} /root/sympa-5.4.3/missing --run autoheader
-AUTOMAKE = ${SHELL} /root/sympa-5.4.3/missing --run automake-1.9
+AMTAR = ${SHELL} /root/sympa_co/source/missing --run tar
+AUTOCONF = ${SHELL} /root/sympa_co/source/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/sympa_co/source/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/sympa_co/source/missing --run automake-1.9
 AWK = nawk
 BINDIR = ${prefix}/bin
 CC = gcc
 CCDEPMODE = depmode=none
 CFLAGS = -g
-CGIDIR = ${prefix}/bin
-CONFDIR = /etc
+CGIDIR = /usr/local/sympa/cgi-bin
+CONFDIR = /usr/local/etc/sympa
 CPP = gcc -E
 CPPFLAGS = 
 CVS2CL = /usr/local/bin
 CYGPATH_W = echo
-DATADIR = ${prefix}/bin/etc
+DATADIR = /usr/local/sympa/data
 DEFS = -DPACKAGE_NAME=\"\" -DPACKAGE_TARNAME=\"\" -DPACKAGE_VERSION=\"\" -DPACKAGE_STRING=\"\" -DPACKAGE_BUGREPORT=\"\" 
 DEPDIR = .deps
-DOCDIR = ${prefix}/doc
+DOCDIR = /usr/local/sympa/doc
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
 EGREP = grep -E
-ETCDIR = ${prefix}/etc
+ETCDIR = /usr/local/etc/sympa
 EXEEXT = 
-EXPLDIR = ${prefix}/expl
+EXPLDIR = /usr/local/sympa/expl
 GROUP = sympa
-INITDIR = /etc/rc.d/init.d
+INITDIR = /usr/local/etc/rc.d
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 LDFLAGS = 
-LIBDIR = ${prefix}/bin
-LIBEXECDIR = ${prefix}/bin
+LIBDIR = /usr/local/lib/sympa
+LIBEXECDIR = /usr/local/libexec/sympa
 LIBOBJS = 
 LIBS = 
-LOCALEDIR = ${prefix}/locale
-LOCKDIR = /var/lock/subsys
+LOCALEDIR = /usr/local/share/locale
+LOCKDIR = /var/spool/lock
 LTLIBOBJS = 
 MAINT = #
 MAINTAINER_MODE_FALSE = 
 MAINTAINER_MODE_TRUE = #
 MAJOR_VERSION = 5
-MAKEINFO = ${SHELL} /root/sympa-5.4.3/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/sympa_co/source/missing --run makeinfo
 #RPMTOPDIR	=	/usr/src/redhat
 MANDIR = /usr/local/man
-MHONARC = /usr/bin/mhonarc
+MHONARC = /usr/local/bin/mhonarc
 MICRO_VERSION = 3
 MINOR_VERSION = 4
 MSGFMT = /usr/local/bin/msgfmt
@@ -153,19 +153,19 @@ PACKAGE_TARNAME =
 PACKAGE_VERSION = 
 PATH_SEPARATOR = :
 PERL = /usr/bin/perl
-PIDDIR = ${prefix}
+PIDDIR = /var/run
 POSTMAP = /usr/sbin/postmap
 
 # POSTMAP_ARG	=	hash:/etc/mail/sympa_virtual
 POSTMAP_ARG = /etc/mail/sympa_virtual
-SAMPLEDIR = ${prefix}/sample
-SBINDIR = ${prefix}/bin
+SAMPLEDIR = /usr/local/sympa/sample
+SBINDIR = /usr/local/sbin
 SCRIPTDIR = ${prefix}/bin
 SENDMAIL_ALIASES = /etc/mail/sympa_aliases
 SET_MAKE = 
 SH = /bin/sh
 SHELL = /bin/sh
-SPOOLDIR = ${prefix}/spool
+SPOOLDIR = /usr/local/sympa/spool
 STRIP = 
 SUDO = /usr/bin/sudo
 SUIDPERL = /usr/bin/suidperl
@@ -197,14 +197,14 @@ host_os = freebsd6.3
 host_vendor = unknown
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /root/sympa-5.4.3/install-sh
+install_sh = /root/sympa_co/source/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = $(mkinstalldirs)
 oldincludedir = /usr/include
-prefix = /home/sympa
+prefix = /usr/local
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
@@ -219,7 +219,7 @@ COOKIE = `$(PERL) -e " print int(rand ( time ))  "`
 PERL_VERSION = `$(PERL) -e ' print $$]'`
 SYMPA_VERSION = 5.4.3
 DIR = ${prefix}
-EXPL_DIR = ${prefix}/expl
+EXPL_DIR = /usr/local/sympa/expl
 MAILERPROGDIR = ${prefix}/bin
 RPMTOPDIR = `rpm --eval %_topdir`
 WWSBINDIR = $(BINDIR)
@@ -241,7 +241,7 @@ SSLCERTDIR = $(EXPL_DIR)/X509-user-certs
 #endif
 CONFIG = $(CONFDIR)/sympa.conf
 WWSCONFIG = $(CONFDIR)/wwsympa.conf
-ETCBINDIR = ${prefix}/bin/etc
+ETCBINDIR = /usr/local/sympa/data
 main_SRC = AUTHORS COPYING ChangeLog INSTALL KNOWNBUGS NEWS README
 
 #ifeq ($(shell uname), Linux)
