--- a/trunk/of/config/ferret_server.yml
+++ b/trunk/of/config/ferret_server.yml
@@ -4,20 +4,20 @@
 # pid_file: location of the server's pid file (relative to RAILS_ROOT)
 # log_file: log file (default: RAILS_ROOT/log/ferret_server.log
 # log_level: log level for the server's logger
-production:
-  host: 192.168.0.10
-  port: 9010
-  pid_file: log/ferret.pid
-  log_file: log/ferret_server.log
-  log_level: warn
-
-development:
-  host: 192.168.0.10
-  port: 9010
-  pid_file: log/ferret.pid
-  log_file: log/ferret_server.log
-  log_level: warn
-
+#production:
+#  host: 192.168.0.10
+#  port: 9010
+#  pid_file: log/ferret.pid
+#  log_file: log/ferret_server.log
+#  log_level: warn
+#
+#development:
+#  host: 192.168.0.10
+#  port: 9010
+#  pid_file: log/ferret.pid
+#  log_file: log/ferret_server.log
+#  log_level: warn
+#
 #test:
 #  host: localhost
 #  port: 9009
