--- a/trunk/services/kwiki/apache/httpd.conf
+++ b/trunk/services/kwiki/apache/httpd.conf
@@ -37,7 +37,7 @@ ServerRoot "/usr/local"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 8080
+Listen 80
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -141,6 +141,7 @@ ServerAdmin you@example.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 #ServerName www.example.com:80
+ServerName kwiki.of.openfoundry.org
 
 #
 # DocumentRoot: The directory out of which you will serve your
