--- a/trunk/services/kwiki/apache/kwiki.conf
+++ b/trunk/services/kwiki/apache/kwiki.conf
@@ -7,7 +7,7 @@ Alias /kwiki/ /usr/local/kwiki/
 	AddHandler cgi-script .cgi
 	DirectoryIndex index.cgi index.html
 
-	ErrorDocument 404 /Kwiki/.default/not_found.cgi
+	ErrorDocument 404 /kwiki/.default/not_found.cgi
 </Directory>
 
 <Directory /usr/local/kwiki/*/database>
